@@ -1,3 +1,7 @@
+2002-08-16  Nick Clifton  <nickc@redhat.com>
+
+	* config/tc-v850.c (md_assemble): Fix assembling of "callt 0x3f".
+
 2002-08-15  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config/tc-mips.c (macro_build_jalr): Make sure we generate
